--- a/test.html
+++ b/test.html
@@ -4,6 +4,7 @@
     <script src="https://unpkg.com/pdf-lib"></script>
     <script src="./pdfjs-3/build/pdf.js"></script>
     <script src="./pdfjs-3/build/pdf.worker.js"></script>
+    <script src="https://unpkg.com/downloadjs@1.4.7"></script>
   </head>
 
   <body>
@@ -38,10 +39,12 @@
       page.moveDown(200)
       page.drawSvgPath(svgPath, { scale: 0.5 })
 
-      const pdfBytes = await pdfDoc.save()
+      const pdfBytes = await pdfDoc.save();
+      // download(pdfBytes, "pdf-simple-curve.pdf", "application/pdf");
 
       const pdfDataUri = await pdfDoc.saveAsBase64({ dataUri: true });
-      //document.getElementById('pdf').src = pdfDataUri;
+      // document.getElementById('pdf').src = pdfDataUri;
+
 
       var pdfjsLib = window['pdfjs-dist/build/pdf'];
       console.log(pdfjsLib, window);
